Letter-spacing fix

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -205,7 +205,7 @@ input { font-weight: 300; 	padding-left:10px; }
 ::-webkit-input-placeholder {
     color:    #666;
 		font-weight: 500;
-		letter-spacing: 10px;
+		letter-spacing: 3px;
 
 }
 
